Update generation of number types that shouldn't be floats
