# codegen/python/uma_auth/controllers/default_controller.py
@@ -5,7 +5,6 @@ from typing import Union
 
 from uma_auth.models.execute_quote_request import ExecuteQuoteRequest  # noqa: E501
 from uma_auth.models.execute_quote_response import ExecuteQuoteResponse  # noqa: E501
-from uma_auth.models.get_balance_request import GetBalanceRequest  # noqa: E501
 from uma_auth.models.get_balance_response import GetBalanceResponse  # noqa: E501
 from uma_auth.models.get_info_response import GetInfoResponse  # noqa: E501
 from uma_auth.models.invoice import Invoice  # noqa: E501
@@ -44,7 +43,7 @@ def fetch_quote(sending_currency_code, receiving_currency_code, locked_currency_
     :param receiving_currency_code: The currency code of the currency that the receiver will receive.
     :type receiving_currency_code: str
     :param locked_currency_amount: The amount to send/receive in the smallest unit of the locked currency (eg. cents). See &#x60;locked_currency_side&#x60; for more information.
-    :type locked_currency_amount: 
+    :type locked_currency_amount: int
     :param locked_currency_side: The side of the quote which should be locked and specified in the &#x60;locked_currency_amount&#x60;. For example, if I want to send exactly $5 MXN from my wallet, I would set this to \&quot;sending\&quot;, and the &#x60;locked_currency_amount&#x60; to 500 (in cents). If I want the receiver to receive exactly $10 USD, I would set this to \&quot;receiving\&quot; and the &#x60;locked_currency_amount&#x60; to 10000 (in cents).
     :type locked_currency_side: str
     :param receiving_address: The UMA address to send the payment to.
@@ -55,18 +54,16 @@ def fetch_quote(sending_currency_code, receiving_currency_code, locked_currency_
     return 'do some magic!'
 
 
-def get_balance(get_balance_request=None):  # noqa: E501
+def get_balance(currency_code=None):  # noqa: E501
     """get_balance: Get the balance of the user&#39;s wallet
 
      # noqa: E501
 
-    :param get_balance_request: 
-    :type get_balance_request: dict | bytes
+    :param currency_code: The currency code of the balance. Assumed to be in msats if not provided. 
+    :type currency_code: str
 
     :rtype: Union[GetBalanceResponse, Tuple[GetBalanceResponse, int], Tuple[GetBalanceResponse, int, Dict[str, str]]
     """
-    if connexion.request.is_json:
-        get_balance_request = GetBalanceRequest.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
