# codegen/python/uma_auth/models/__init__.py
@@ -3,7 +3,6 @@
 from uma_auth.models.currency_preference import CurrencyPreference
 from uma_auth.models.execute_quote_request import ExecuteQuoteRequest
 from uma_auth.models.execute_quote_response import ExecuteQuoteResponse
-from uma_auth.models.get_balance_request import GetBalanceRequest
 from uma_auth.models.get_balance_response import GetBalanceResponse
 from uma_auth.models.get_info_response import GetInfoResponse
 from uma_auth.models.invoice import Invoice
